--- a/aws/cloudformation/distributed.yaml
+++ b/aws/cloudformation/distributed.yaml
@@ -1,25 +1,25 @@
 Description: >
-    This template deploys the Imagetrends application on EC2 instances within an Autoscaling Group, behind a load balancer, with an Aurora MySQL database.
+    This template deploys the WebApp application on EC2 instances within an Autoscaling Group, behind a load balancer, with an Aurora MySQL database.
 
-    Last Modified: 5th November 2018
+    Last Modified: 1st April 2019
     Author: Scott Horsfield <shhorsfi@amazon.com>
 
 Parameters:
 
     DBName:
-        Description: Imagetrends Database Name
+        Description: WebApp Database Name
         Type: String
-        Default: imagetrends
+        Default: webapp
 
     DBUser:
-        Description: Imagetrends Database User
+        Description: WebApp Database User
         Type: String
-        Default: imagetrends
+        Default: webapp
         
     DBPassword:
-        Description: Imagetrends Database User Password
+        Description: WebApp Database User Password
         Type: String
-        Default: imagetrends
+        Default: webapp
 
     KeyName:
         Description: Name of an existing EC2 KeyPair to enable SSH access to the app instances.
@@ -61,7 +61,7 @@ Resources:
     VPC:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/imagetrends-sample-application/distributed-nested/vpc.yaml
+            TemplateURL: https://s3.amazonaws.com/example-corp-sample-application/distributed-nested/vpc.yaml
             Parameters:
                 EnvironmentName: !Ref AWS::StackName
                 VpcCIDR: 10.180.0.0/16
@@ -73,7 +73,7 @@ Resources:
     SecurityGroups:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/imagetrends-sample-application/distributed-nested/security-groups.yaml
+            TemplateURL: https://s3.amazonaws.com/example-corp-sample-application/distributed-nested/security-groups.yaml
             Parameters: 
                 EnvironmentName: !Ref AWS::StackName
                 VPC: !GetAtt VPC.Outputs.VPC
@@ -82,7 +82,7 @@ Resources:
     ALB:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/imagetrends-sample-application/distributed-nested/load-balancers.yaml
+            TemplateURL: https://s3.amazonaws.com/example-corp-sample-application/distributed-nested/load-balancers.yaml
             Parameters:
                 EnvironmentName: !Ref AWS::StackName
                 VPC: !GetAtt VPC.Outputs.VPC
@@ -92,7 +92,7 @@ Resources:
     ASG:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/imagetrends-sample-application/distributed-nested/autoscaling-group.yaml
+            TemplateURL: https://s3.amazonaws.com/example-corp-sample-application/distributed-nested/autoscaling-group.yaml
             Parameters:
                 EnvironmentName: !Ref AWS::StackName
                 InstanceType: !Ref InstanceType
@@ -109,12 +109,12 @@ Resources:
     ImageUploadBucket:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/imagetrends-sample-application/distributed-nested/bucket.yaml
+            TemplateURL: https://s3.amazonaws.com/example-corp-sample-application/distributed-nested/bucket.yaml
 
     Database:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3-us-west-2.amazonaws.com/imagetrends-sample-application/distributed-nested/database.yaml
+            TemplateURL: https://s3-us-west-2.amazonaws.com/example-corp-sample-application/distributed-nested/database.yaml
             Parameters:
                 DBInstanceType: !Ref DBInstanceType
                 EnvironmentName: !Ref AWS::StackName
@@ -127,6 +127,6 @@ Resources:
 
 Outputs:
 
-    ImagetrendsAppUrl: 
-        Description: The URL endpoint for the Imagetrends application
+    WebAppAppUrl: 
+        Description: The URL endpoint for the WebApp application
         Value: !Join [ "", [ "http://", !GetAtt ALB.Outputs.LoadBalancerUrl]]
